benlottes-react-app/src/App.css
html {
  box-sizing: border-box;
}

@font-face {
  font-family: "Aaux Next Bold";
  src: url("./resources/fonts/AauxNextBlk.otf");
}
@font-face {
  font-family: "Aaux Next";
  src: url("./resources/fonts/aauxnextmdwebfont.otf");
}

*, *::before, *::after {
  box-sizing: inherit;
  padding: 0;
  margin: 0;
  font-family: Aaux Next;
}

.app {
  width: 960px;
  margin: 10;
  padding: 20px;
}

.App{
  padding: 20px;
}

nav ul {
  list-style: none;
  display: flex;
  background-color: black;
  margin-bottom: 20px;
}

nav ul li {
  padding: 20px;
}

nav ul li a {
  color: white;
  text-decoration: none;
}

.current {
  border-bottom: 4px solid white;
}

h1 {
  margin-bottom: 20px;
}

p {
  margin-bottom: 15px;
}

.active {
  font-family: Aaux Next Bold;
}

.flexbox-container{
  display: flex;
  flex-direction: row;
}
.side-buttons{
  display: flex;
  flex-direction: row;
  flex: 100px;
  margin: 0px;
}
.button-column > div{
  display: flex;
  flex-direction: column;
  margin-bottom: 15px;
  margin-left: 15px;
}

.name-plate{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.page-content{
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 20px;
}

.projects{
  display: flex;
  flex-wrap: wrap;
  flex: 1;
  justify-content: center;
  align-items: center;
  height: 80vh;
  gap: 80px;
}

.bio-align{
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 80vh;
}

.resume{
  display: flex;
  align-items: center;
  flex-direction: column;
}

.home{
  display: flex;
  justify-content: center;
  align-items: center;
  height: 80vh;
  flex-direction: column;
}

.note-grid{
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: row;
  flex-wrap: wrap;
}

.note{
  display: flex;
  flex: 1;
  flex-direction: column;
  margin: 20px;
  padding: 10px;
  border: 1px solid black;
  border-radius: 5px;
  width: 300px;
  height: 300px;
}

.note-title{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 253px;
}

.note-content{
  resize: none;
}

.new-note{
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.submit-button{
  display: flex;
  gap: 5px;
  margin-top: 0px;
}

